envoy-config.tpl.yaml
# envoy as edge server
#   - https://www.envoyproxy.io/docs/envoy/v1.14.5/
#   - https://github.com/envoyproxy/envoy/blob/master/examples/front-proxy/service-envoy.yaml
#   - https://www.envoyproxy.io/docs/envoy/latest/configuration/best_practices/edge
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9001
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: $CMS_TRITON_PORT
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          codec_type: auto
          stat_prefix: ingress_http
          access_log:
            - name: envoy.file_access_log
              config:
                path: /dev/stdout
          route_config:
            name: static_api_routes
            virtual_hosts:
            - name: api_vhost
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/sao/"
                route:
                  cluster: cluster_sao
              - match:
                  prefix: "/galatea/"
                route:
                  cluster: cluster_galatea
              - match:
                  prefix: "/cmsusers/"
                route:
                  cluster: cluster_users
          http_filters:
          - name: envoy.filters.http.router
            typed_config: {}
  clusters:
  - name: cluster_sao
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: cluster_sao
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: $CMS_SAO_IPADDR
                port_value: $CMS_SAO_PORT
  - name: cluster_galatea
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: cluster_galatea
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: $CMS_GALATEA_IPADDR
                port_value: $CMS_GALATEA_PORT
  - name: cluster_users
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: cluster_users
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: $CMS_USERS_IPADDR
                port_value: $CMS_USERS_PORT
